--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,18 @@ body {
   .container{
     padding: var(--container-padding)
   }
+
+  .h1 {
+    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
+  }
+  
+  .h2 {
+    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
+  }
+  
+  .h3 {
+    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+  }
 }
 
 
